--- a/geometry_shapes_dialog_base.ui
+++ b/geometry_shapes_dialog_base.ui
@@ -70,6 +70,9 @@
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
+	   <property name="decimals">
+           <number>3</number>
+       </property>
        <property name="maximum">
         <double>1000000.000000000000000</double>
        </property>
@@ -82,6 +85,9 @@
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
+       </property>
+	   <property name="decimals">
+           <number>3</number>
        </property>
        <property name="maximum">
         <double>1000000.000000000000000</double>
